--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,5 +1,6 @@
 name: test
 on: [push, workflow_dispatch]
+
 jobs:
   test:
     runs-on: ubuntu-24.04
@@ -30,6 +31,10 @@ jobs:
           make
           # make will return success even if the test fails, so check for failure in the results.xml
           ! grep failure results.xml
+        env:
+          RANDOM_SEED: ${{ github.run_id }}
+          COCOTB_LOG_LEVEL: DEBUG
+          COCOTB_RESOLVE_X: ZEROS
 
       - name: Test Summary
         uses: test-summary/action@v2.3
@@ -37,11 +42,11 @@ jobs:
           paths: "test/results.xml"
         if: always()
 
-      - name: upload vcd
+      - name: Upload VCD + Results
         if: success() || failure()
         uses: actions/upload-artifact@v4
         with:
           name: test-vcd
           path: |
-            test/tb.vcd
+            test/*.vcd
             test/results.xml
