--- a/test/Makefile
+++ b/test/Makefile
@@ -1,44 +1,48 @@
-# Makefile
-# See https://docs.cocotb.org/en/stable/quickstart.html for more info
+# Makefile for Cocotb-based simulation
 
-# defaults
+# Simulator: choose icarus (default) or verilator
 SIM ?= icarus
 TOPLEVEL_LANG ?= verilog
+
+# Source directory
 SRC_DIR = $(PWD)/../src
-PROJECT_SOURCES = tt_um_axi4lite_top.v axi4lite_master.v axi4lite_slave.v
+
+# Project sources (RTL)
+PROJECT_SOURCES = \
+    tt_um_axi4lite_top.v \
+    axi4lite_master.v \
+    axi4lite_slave.v
 
 ifneq ($(GATES),yes)
 
-# RTL simulation:
-SIM_BUILD				= sim_build/rtl
+# ---------------- RTL Simulation ----------------
+SIM_BUILD        = sim_build/rtl
 VERILOG_SOURCES += $(addprefix $(SRC_DIR)/,$(PROJECT_SOURCES))
 
 else
 
-# Gate level simulation:
-SIM_BUILD				= sim_build/gl
+# ---------------- Gate-Level Simulation (GLS) ----------------
+SIM_BUILD        = sim_build/gl
 COMPILE_ARGS    += -DGL_TEST
 COMPILE_ARGS    += -DFUNCTIONAL
 COMPILE_ARGS    += -DUSE_POWER_PINS
 COMPILE_ARGS    += -DSIM
 COMPILE_ARGS    += -DUNIT_DELAY=\#1
+
 VERILOG_SOURCES += $(PDK_ROOT)/sky130A/libs.ref/sky130_fd_sc_hd/verilog/primitives.v
 VERILOG_SOURCES += $(PDK_ROOT)/sky130A/libs.ref/sky130_fd_sc_hd/verilog/sky130_fd_sc_hd.v
 
-# this gets copied in by the GDS action workflow
+# Gate-level netlist (inserted by CI workflow after synthesis)
 VERILOG_SOURCES += $(PWD)/gate_level_netlist.v
 
 endif
 
-# Allow sharing configuration between design and testbench via `include`:
-COMPILE_ARGS 		+= -I$(SRC_DIR)
+# Allow shared include paths
+COMPILE_ARGS += -I$(SRC_DIR)
 
-# Include the testbench sources:
-VERILOG_SOURCES += $(PWD)/tb.v
-TOPLEVEL = axi4lite_tb
+# ---------------- Top and Python test ----------------
+TOPLEVEL = tt_um_axi4lite_top
+MODULE   = test_axi4lite   # Python file: test_axi4lite.py
 
-# MODULE is the basename of the Python test file
-MODULE = test
-
-# include cocotb's make rules to take care of the simulator setup
+# ---------------- Cocotb include ----------------
 include $(shell cocotb-config --makefiles)/Makefile.sim
