--- a/test/Makefile
+++ b/test/Makefile
@@ -1,52 +1,44 @@
 # Makefile
-# Cocotb + Verilog testbench
+# See https://docs.cocotb.org/en/stable/quickstart.html for more info
 
-# Simulator and language
+# defaults
 SIM ?= icarus
 TOPLEVEL_LANG ?= verilog
-
-# Source directory
 SRC_DIR = $(PWD)/../src
 PROJECT_SOURCES = tt_um_axi4lite_top.v axi4lite_master.v axi4lite_slave.v
 
 ifneq ($(GATES),yes)
 
-# ---------------- RTL simulation ----------------
-SIM_BUILD        = sim_build/rtl
+# RTL simulation:
+SIM_BUILD				= sim_build/rtl
 VERILOG_SOURCES += $(addprefix $(SRC_DIR)/,$(PROJECT_SOURCES))
 
 else
 
-# ---------------- Gate Level simulation ----------------
-SIM_BUILD        = sim_build/gl
+# Gate level simulation:
+SIM_BUILD				= sim_build/gl
 COMPILE_ARGS    += -DGL_TEST
 COMPILE_ARGS    += -DFUNCTIONAL
 COMPILE_ARGS    += -DUSE_POWER_PINS
 COMPILE_ARGS    += -DSIM
 COMPILE_ARGS    += -DUNIT_DELAY=\#1
-
-# Sky130 primitives + standard cells
 VERILOG_SOURCES += $(PDK_ROOT)/sky130A/libs.ref/sky130_fd_sc_hd/verilog/primitives.v
 VERILOG_SOURCES += $(PDK_ROOT)/sky130A/libs.ref/sky130_fd_sc_hd/verilog/sky130_fd_sc_hd.v
 
-# GDS workflow netlist (injected later)
+# this gets copied in by the GDS action workflow
 VERILOG_SOURCES += $(PWD)/gate_level_netlist.v
 
 endif
 
-# Common include path
-COMPILE_ARGS += -I$(SRC_DIR)
+# Allow sharing configuration between design and testbench via include:
+COMPILE_ARGS 		+= -I$(SRC_DIR)
 
-# Include the Verilog testbench wrapper
+# Include the testbench sources:
 VERILOG_SOURCES += $(PWD)/tb.v
 TOPLEVEL = axi4lite_tb
 
-# Python test module
+# MODULE is the basename of the Python test file
 MODULE = test
 
-# Resolve X/Z automatically → 0
-export COCOTB_RESOLVE_X = zero
-
-# Cocotb make rules
-COCOTB_MAKEFILES := $(shell cocotb-config --makefiles)
-include $(COCOTB_MAKEFILES)/Makefile.sim
+# include cocotb's make rules to take care of the simulator setup
+include $(shell cocotb-config --makefiles)/Makefile.sim
