--- a/.github/workflows/gds.yaml
+++ b/.github/workflows/gds.yaml
@@ -33,7 +33,7 @@ jobs:
     needs: gds
     runs-on: ubuntu-24.04
     env:
-      COCOTB_RESOLVE_X: ZERO
+      COCOTB_RESOLVE_X: VALUE
     steps:
       - name: checkout repo
         uses: actions/checkout@v4
